Bug 463935 - Crash on attempting to replay a message with an user template
Summary: Crash on attempting to replay a message with an user template
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 5.19.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-06 19:02 UTC by Giuseppe Vinci
Modified: 2023-01-06 23:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Vinci 2023-01-06 19:02:23 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
[KCrash Handler]
#4  KMReaderWin::htmlMail (this=0x0) at /usr/src/debug/kmail-21.12.3-bp154.1.19.x86_64/src/kmreaderwin.cpp:398
#5  0x00007fa093873b4d in KMMainWidget::slotCustomReplyAllToMsg (this=0x55a5bce08cc0, tmpl=...) at /usr/src/debug/kmail-21.12.3-bp154.1.19.x86_64/src/kmmainwidget.cpp:2094
#6  0x00007fa093755b8f in KMMainWidget::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kmail-21.12.3-bp154.1.19.x86_64/build/src/kmailprivate_autogen/EWIEGA46WW/moc_kmmainwidget.cpp:663
#7  0x00007fa123e6dfa9 in doActivate<false> (sender=0x55a5bcf3e610, signal_index=4, argv=0x7ffcf6c45410) at kernel/qobject.cpp:3898
#8  0x00007fa123e67782 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fa09244f5e0 <TemplateParser::CustomTemplatesMenu::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffcf6c45410) at kernel/qobject.cpp:3946
#9  0x00007fa092213405 in TemplateParser::CustomTemplatesMenu::replyAllTemplateSelected (this=<optimized out>, _t1=...) at /usr/src/debug/messagelib-21.12.3-bp154.1.22.x86_64/build/templateparser/src/KF5TemplateParser_autogen/EWIEGA46WW/moc_customtemplatesmenu.cpp:187
#10 0x00007fa123e6e1c7 in QtPrivate::QSlotObjectBase::call (a=0x7ffcf6c45530, r=0x55a5bcf3e610, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#11 doActivate<false> (sender=0x55a5bd06a1a0, signal_index=4, argv=0x7ffcf6c45530) at kernel/qobject.cpp:3886
#12 0x00007fa123e67782 in QMetaObject::activate (sender=sender@entry=0x55a5bd06a1a0, m=m@entry=0x7fa1257110a0 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffcf6c45530) at kernel/qobject.cpp:3946
#13 0x00007fa125025e12 in QAction::triggered (this=this@entry=0x55a5bd06a1a0, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#14 0x00007fa12502847c in QAction::activate (this=0x55a5bd06a1a0, event=<optimized out>) at kernel/qaction.cpp:1161
#15 0x00007fa1251a443b in QMenuPrivate::activateCausedStack (this=this@entry=0x55a5bd013b20, causedStack=..., action=action@entry=0x55a5bd06a1a0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1384
#16 0x00007fa1251abc0b in QMenuPrivate::activateAction (this=this@entry=0x55a5bd013b20, action=action@entry=0x55a5bd06a1a0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1461
#17 0x00007fa1251ac93d in QMenu::mouseReleaseEvent (this=<optimized out>, e=0x7ffcf6c45bf0) at widgets/qmenu.cpp:2966
#18 0x00007fa12506cb48 in QWidget::event (this=this@entry=0x55a5bd055f90, event=event@entry=0x7ffcf6c45bf0) at kernel/qwidget.cpp:9020
#19 0x00007fa1251aebdb in QMenu::event (this=0x55a5bd055f90, e=0x7ffcf6c45bf0) at widgets/qmenu.cpp:3088
#20 0x00007fa12502c3bc in QApplicationPrivate::notify_helper (this=this@entry=0x55a5bc7e33f0, receiver=receiver@entry=0x55a5bd055f90, e=e@entry=0x7ffcf6c45bf0) at kernel/qapplication.cpp:3632
#21 0x00007fa125033730 in QApplication::notify (this=<optimized out>, receiver=0x55a5bd055f90, e=0x7ffcf6c45bf0) at kernel/qapplication.cpp:3076
#22 0x00007fa123e30c23 in QCoreApplication::notifyInternal2 (receiver=0x55a5bd055f90, event=0x7ffcf6c45bf0) at kernel/qcoreapplication.cpp:1064
#23 0x00007fa123e30e0e in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x55a5bd055f90, event=event@entry=0x7ffcf6c45bf0) at kernel/qcoreapplication.cpp:1474
#24 0x00007fa12503271f in QApplicationPrivate::sendMouseEvent (receiver=0x55a5bd055f90, event=event@entry=0x7ffcf6c45bf0, alienWidget=0x0, nativeWidget=0x55a5bd055f90, buttonDown=buttonDown@entry=0x7fa125748670 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#25 0x00007fa125087781 in QWidgetWindow::handleMouseEvent (this=this@entry=0x7fa0f4006c70, event=event@entry=0x7ffcf6c46050) at kernel/qwidgetwindow.cpp:580
#26 0x00007fa12508a38d in QWidgetWindow::event (this=0x7fa0f4006c70, event=0x7ffcf6c46050) at kernel/qwidgetwindow.cpp:300
#27 0x00007fa12502c3bc in QApplicationPrivate::notify_helper (this=this@entry=0x55a5bc7e33f0, receiver=receiver@entry=0x7fa0f4006c70, e=e@entry=0x7ffcf6c46050) at kernel/qapplication.cpp:3632
#28 0x00007fa1250331a0 in QApplication::notify (this=0x7ffcf6c475b0, receiver=0x7fa0f4006c70, e=0x7ffcf6c46050) at kernel/qapplication.cpp:3156
#29 0x00007fa123e30c23 in QCoreApplication::notifyInternal2 (receiver=0x7fa0f4006c70, event=0x7ffcf6c46050) at kernel/qcoreapplication.cpp:1064
#30 0x00007fa123e30e0e in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x7fa0f4006c70, event=event@entry=0x7ffcf6c46050) at kernel/qcoreapplication.cpp:1474
#31 0x00007fa1246d90cb in QGuiApplicationPrivate::processMouseEvent (e=0x55a5bdaa5580) at kernel/qguiapplication.cpp:2282
#32 0x00007fa1246da675 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x55a5bdaa5580) at kernel/qguiapplication.cpp:2002
#33 0x00007fa1246b244b in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#34 0x00007fa0fc4b0d0a in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#35 0x00007fa1154c782b in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#36 0x00007fa1154c7bd0 in ?? () from /usr/lib64/libglib-2.0.so.0
#37 0x00007fa1154c7c5c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#38 0x00007fa123e9302c in QEventDispatcherGlib::processEvents (this=0x55a5bc8bb400, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#39 0x00007fa123e2f48a in QEventLoop::exec (this=this@entry=0x7ffcf6c46400, flags=..., flags@entry=...) at kernel/qeventloop.cpp:232
#40 0x00007fa1251a9804 in QMenuPrivate::exec(QPoint const&, QAction*, std::function<QPoint (QSize const&)>) (this=0x55a5bd162760, p=..., action=action@entry=0x0, positionFunction=...) at widgets/qmenu.cpp:2699
#41 0x00007fa1251a990e in QMenu::exec (this=this@entry=0x55a5bd38faf0, p=..., action=action@entry=0x0) at widgets/qmenu.cpp:2686
#42 0x00007fa09289b4a1 in MessageList::Widget::viewMessageListContextPopupRequest (this=<optimized out>, selectedItems=..., globalPos=...) at /usr/src/debug/messagelib-21.12.3-bp154.1.22.x86_64/messagelist/src/widget.cpp:311
#43 0x00007fa092861ad0 in MessageList::Core::View::ViewPrivate::onPressed (this=0x55a5bcfbeec0, e=0x7ffcf6c46c90) at /usr/src/debug/messagelib-21.12.3-bp154.1.22.x86_64/messagelist/src/core/view.cpp:2671
#44 0x00007fa12506d61f in QWidget::event (this=this@entry=0x55a5bcd21ce0, event=event@entry=0x7ffcf6c46c90) at kernel/qwidget.cpp:8642
#45 0x00007fa125113c5e in QFrame::event (this=0x55a5bcd21ce0, e=0x7ffcf6c46c90) at widgets/qframe.cpp:550
#46 0x00007fa125291dd3 in QAbstractItemView::viewportEvent (this=this@entry=0x55a5bcd21ce0, event=event@entry=0x7ffcf6c46c90) at itemviews/qabstractitemview.cpp:1746
#47 0x00007fa1252fc36c in QTreeView::viewportEvent (this=0x55a5bcd21ce0, event=0x7ffcf6c46c90) at itemviews/qtreeview.cpp:1314
#48 0x00007fa123e309b0 in QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x55a5bcd957c0, event=event@entry=0x7ffcf6c46c90) at kernel/qcoreapplication.cpp:1190
#49 0x00007fa12502c392 in QApplicationPrivate::notify_helper (this=this@entry=0x55a5bc7e33f0, receiver=receiver@entry=0x55a5bcd957c0, e=e@entry=0x7ffcf6c46c90) at kernel/qapplication.cpp:3626
#50 0x00007fa125033730 in QApplication::notify (this=<optimized out>, receiver=0x55a5bcd957c0, e=0x7ffcf6c46c90) at kernel/qapplication.cpp:3076
#51 0x00007fa123e30c23 in QCoreApplication::notifyInternal2 (receiver=0x55a5bcd957c0, event=0x7ffcf6c46c90) at kernel/qcoreapplication.cpp:1064
#52 0x00007fa123e30e0e in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x55a5bcd957c0, event=event@entry=0x7ffcf6c46c90) at kernel/qcoreapplication.cpp:1474
#53 0x00007fa12503271f in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x55a5bcd957c0, event=event@entry=0x7ffcf6c46c90, alienWidget=0x55a5bcd957c0, nativeWidget=0x55a5bc7eaa60, buttonDown=buttonDown@entry=0x7fa125748670 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#54 0x00007fa12508731c in QWidgetWindow::handleMouseEvent (this=this@entry=0x55a5bd275840, event=event@entry=0x7ffcf6c470f0) at kernel/qwidgetwindow.cpp:683
#55 0x00007fa12508a38d in QWidgetWindow::event (this=0x55a5bd275840, event=0x7ffcf6c470f0) at kernel/qwidgetwindow.cpp:300
#56 0x00007fa12502c3bc in QApplicationPrivate::notify_helper (this=this@entry=0x55a5bc7e33f0, receiver=receiver@entry=0x55a5bd275840, e=e@entry=0x7ffcf6c470f0) at kernel/qapplication.cpp:3632
#57 0x00007fa1250331a0 in QApplication::notify (this=0x7ffcf6c475b0, receiver=0x55a5bd275840, e=0x7ffcf6c470f0) at kernel/qapplication.cpp:3156
#58 0x00007fa123e30c23 in QCoreApplication::notifyInternal2 (receiver=0x55a5bd275840, event=0x7ffcf6c470f0) at kernel/qcoreapplication.cpp:1064
#59 0x00007fa123e30e0e in QCoreApplication::sendSpontaneousEvent (receiver=receiver@entry=0x55a5bd275840, event=event@entry=0x7ffcf6c470f0) at kernel/qcoreapplication.cpp:1474
#60 0x00007fa1246d90cb in QGuiApplicationPrivate::processMouseEvent (e=0x55a5bd576d70) at kernel/qguiapplication.cpp:2282
#61 0x00007fa1246da675 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x55a5bd576d70) at kernel/qguiapplication.cpp:2002
#62 0x00007fa1246b244b in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#63 0x00007fa0fc4b0d0a in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#64 0x00007fa1154c782b in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#65 0x00007fa1154c7bd0 in ?? () from /usr/lib64/libglib-2.0.so.0
#66 0x00007fa1154c7c5c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#67 0x00007fa123e9302c in QEventDispatcherGlib::processEvents (this=0x55a5bc8bb400, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#68 0x00007fa123e2f48a in QEventLoop::exec (this=this@entry=0x7ffcf6c47490, flags=..., flags@entry=...) at kernel/qeventloop.cpp:232
#69 0x00007fa123e38cc7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1375
#70 0x000055a5bb804539 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kontact-21.12.3-bp154.1.24.x86_64/src/main.cpp:215
[Inferior 1 (process 9011) detached]



STEPS TO REPRODUCE
1. on the message list right click a message you have to replay
2. on the context menu choose "replay" ->  "replay to all  with own template" -> choose a template
3. kmail crashes immediatly

OBSERVED RESULT
kmail crashes immediatly

EXPECTED RESULT
An mail editor will be open to write a replay to the clicked message

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: OpenSUSE Leap 15.4
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphic platform: X11

ADDITIONAL INFORMATION
1. Replaying with kmail templates does not cause crash
2. Replaying with own templates causes crash. But I have been using these templates for minimal two years (on openSUSE 15.3) without problems
3. After the first crashes I edited the templates. I thought, through editing the template could be "re-activated". This measure did not bring anything.
4. If you open the message and want to to replay from icon (click on replay icon ->  "replay to all  with own template" -> choose a template), you'll get the replay message editor correctly, but with the warn message:
     "Error transferring https://api.languagetoolplus.com/v2/languages/languages - server replied: Not Found"
5. The same warn message appears, if you want to write a new message on opening the message editor.
Comment 1 Laurent Montel 2023-01-06 23:31:54 UTC
Git commit 94e28559c96b71721b02393a23cbfeefa93a607b by Laurent Montel.
Committed on 06/01/2023 at 23:31.
Pushed by mlaurent into branch 'release/22.12'.

Fix bug 463935: Crash on attempting to replay a message with an user template
FIXED-IN: 5.22.2

M  +2    -3    src/kmmainwidget.cpp

https://invent.kde.org/pim/kmail/commit/94e28559c96b71721b02393a23cbfeefa93a607b