Fix bug 463935: Crash on attempting to replay a message with an user template

BUG: 463935
FIXED-IN: 5.22.2